<resources>
    <string name="app_name">Picture Editor</string>

    <string name="sign_up">Sign Up</string>
    <string name="we_need_a_few_details_to_get_your_account_ready">We need a few details to get your account ready</string>
    <string name="first_name">First Name</string>
    <string name="first_name_hint">Jhon</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_hint">Mishra</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="your_example_com">your@example.com</string>
    <string name="password">Password</string>
    <string name="password_hint">• • • • • • • • •</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
</resources>