<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".registerActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layoutHeader"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:text="Welcome To"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:text="All in one Picture Editor App"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textSignInLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:text="@string/sign_in_to_your_account"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutHeader" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="4dp"
                app:layout_constraintTop_toBottomOf="@+id/textSignInLabel">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/email"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/your_example_com"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:textCursorDrawable="@color/black"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/password"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/inputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/password_hint"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryText"
                        android:textCursorDrawable="@color/black"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:text="@string/sign_in"
                android:textColor="@color/colorTextIcons"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/cardSignIn" />

            <ProgressBar
                android:id="@+id/progressBarSignIn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/buttonSignIn"
                app:layout_constraintEnd_toEndOf="@+id/buttonSignIn"
                app:layout_constraintStart_toStartOf="@+id/buttonSignIn"
                app:layout_constraintTop_toTopOf="@id/buttonSignIn" />

            <TextView
                android:id="@+id/textNoAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/colorPrimaryText"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

            <TextView
                android:id="@+id/textSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:padding="6dp"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/colorAccentPro"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/textNoAccount" />

            <TextView
                android:id="@+id/textContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:padding="6dp"
                android:text="Continue Without Register"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSignUp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>